
	
	- Added current FirePHP version and OS info to update URL

2007-12-07 - Release Version: 0.0.5.26

	- Finished full jQuery support for renderer
	- Bugfix to make FirePHP work when Firebug is detached in its own window

2007-12-05 - Release Version: 0.0.5.24

	- Fixed incompatibility with HTML Validator extension: http://users.skynet.be/mgueury/mozilla/
	- Fixed unique renderer key to allow request scoping in generated HTML for Console and Net panels
	- Bugfix to make FirePHP work in Console panel with Ajax requests

2007-12-04 - Release Version: 0.0.5.23

	- Implemented explicit enable for each host and allowed sites menu & dialog
	- Only send FirePHP accept and user agent headers when firebug is enabled
	- Changed header name from FirePHP-Mask to FirePHP-RendererURL
	- Added support for javascript in the rendered HTML

2007-11-26 - Release Version: 0.0.5.22

	- Updated to ignore case of header names
  - Implemented data rendering in Server tab where data is fetched from response headers
	- Added "Server" tab to Firebug's Net panel requests
	- Abandoned previous idea in favor of simplicity
	
----------

  - Changed PINF-org.firephp-* headers to X-PINF-org.firephp-*
  - Updated UI design
  - Added variable inspector and viewer
  - Added console viewer
  - Added support for platform-specific CSS and added Mac look
  - Introduced versioning for the FirePHP XML protocol and set to 0.2
  - Added a FirePHPChannel object to the content windows that can be
    used to communicate with/via FirePHP
  - Added event/listener based communication of all components via FirePHPChannel
  - Revised format of capabilities definition
  - Revised how capability definitions are loaded
  - Added support to allow and block capability definition loading for hosts
  - Implemented support for build version
  - Added FirePHP/x.x.x to User-Agent Request header
  - Implemented fetching of intelligence data from X-PINF-org.firephp-Data header